--- a/home page.html
+++ b/home page.html
@@ -17,6 +17,7 @@
         <div class="container">
           <header>
             <a href="#" class="logo"> logo</a>
+            <img src="/css/images/wall-of-gain.png"> 
             <ul id="nav-list">
                   <li><a href="#home">Home</a></li>
                   <li><a href="#who-are-we">Wall Of Gains</a></li>
@@ -25,4 +26,4 @@
                   <li><a href="#contact">Contact</a></li>
               </ul>
           </header>
-      </section>
+    </section>
