--- a/home page.html
+++ b/home page.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content=" Wall Of Gains is a community built on discord, we offer education and alpha within web 3. From NFT's to Cryptocurrency flipping, holdr, swings and scalps we got all.">
 	<meta name="keywords" content="discord, community, nft, nfts, crypto, crypto currency, solana, etherum, futures">
