--- a/home page.html
+++ b/home page.html
@@ -12,11 +12,11 @@
   <title>Wall Of Gains</title>
 </head>
 <!--- top of page python3 -m http.server-->
-<body id="top">
+<body id="top" id="home">
     <section>
         <div class="container">
           <header>
-            <a href="#" class="logo"> logo</a>
+            <a href="home" class="logo"> logo</a>
             <div class="audio-div">
               <audio autoplay controls preload="auto">
                 <source src="css/audio/Konoha Peace - Naruto Vibes (1 Hour) Naruto study lofi chill beats [TubeRipper.com].mp4" type="audio/mpeg">
@@ -25,11 +25,11 @@
               <p class="play-me">Play Me! while you read</p>
             </div>
             <ul id="nav-list">
-                  <li><a href="#home">Home</a></li>
-                  <li><a href="#who-are-we">Wall Of Gains</a></li>
-                  <li><a href="#Education">Education</a></summary>
-                  <li><a href="#profits">Profits</a></li>
-                  <li><a href="#contact">Contact</a></li>
+                  <li><a href="#home" class="active">Home</a></li>
+                  <li><a href="#who-are-we" class="active" >Wall Of Gains</a></li>
+                  <li><a href="#Education" class="active">Education</a></summary>
+                  <li><a href="#profits" class="active">Profits</a></li>
+                  <li><a href="#contact" class="active">Contact</a></li>
               </ul>
           </header>
     </section>
