--- a/home page.html
+++ b/home page.html
@@ -16,7 +16,7 @@
     <section>
         <div class="container">
           <header>
-            <a href="home" class="logo"> logo</a>
+            <a href="#home" class="logo"> logo</a>
             <div class="audio-div">
               <audio autoplay controls preload="auto">
                 <source src="css/audio/Konoha Peace - Naruto Vibes (1 Hour) Naruto study lofi chill beats [TubeRipper.com].mp4" type="audio/mpeg">
