--- a/home page.html
+++ b/home page.html
@@ -12,11 +12,12 @@
   <title>Wall Of Gains</title>
 </head>
 <!--- top of page python3 -m http.server-->
+
 <body id="top" id="home">
     <section>
         <div class="container">
           <header>
-            <a href="#home" class="logo"> logo</a>
+            <a href="#" id="home" class="logo"> logo</a>
             <div class="audio-div">
               <audio autoplay controls preload="auto">
                 <source src="css/audio/Konoha Peace - Naruto Vibes (1 Hour) Naruto study lofi chill beats [TubeRipper.com].mp4" type="audio/mpeg">
@@ -24,12 +25,21 @@
               </audio>
               <p class="play-me">Play Me! while you read</p>
             </div>
-            <ul id="nav-list">
+            <ul>
                   <li><a href="#home" class="active">Home</a></li>
-                  <li><a href="#who-are-we" class="active" >Wall Of Gains</a></li>
-                  <li><a href="#Education" class="active">Education</a></summary>
-                  <li><a href="#profits" class="active">Profits</a></li>
-                  <li><a href="#contact" class="active">Contact</a></li>
+                  <li><a href="#who-are-we" class="active"> Wall Of Gains</a></li>
+                  <li><a href="#Education" class="active"> Education</a></summary>
+                  <li><a href="#profits" class="active"> Profits</a></li>
+                  <li><a href="#contact" class="active"> Contact</a></li>
               </ul>
           </header>
+          <div class = "intro-content-box">
+            <h2>Who are we, what are we doing in this space...</h2> 
+            <p>
+              We are an Alpha group based on discord, we provide Education on Solana & Ethereum NFTs, as well as trading Futures. We have dedicated team  to help bring profits to our community. among the team we have years of experience in bull markets and bear markets. weve even brought in sport bets callers due to meta changes and hes killing it approx. 64% win raate this current month. join our discord to find to see the profits we are making.
+            </p>  
+          </div>
+          <div class="logo">
+              <img src="css/images/wall-of-gain.png">
+          </div>
     </section>
