--- a/home page.html
+++ b/home page.html
@@ -16,8 +16,7 @@
 <body id="top" id="home">
     <section>
         <div class="container">
-          <header>
-            <a href="#" id="home" class="logo"> logo</a>
+          <header id="home" id="top">
             <div class="audio-div">
               <audio autoplay controls preload="auto">
                 <source src="css/audio/Konoha Peace - Naruto Vibes (1 Hour) Naruto study lofi chill beats [TubeRipper.com].mp4" type="audio/mpeg">
@@ -39,7 +38,76 @@
               We are an Alpha group based on discord, we provide Education on Solana & Ethereum NFTs, as well as trading Futures. We have dedicated team  to help bring profits to our community. among the team we have years of experience in bull markets and bear markets. weve even brought in sport bets callers due to meta changes and hes killing it approx. 64% win raate this current month. join our discord to find to see the profits we are making.
             </p>  
           </div>
-          <div class="logo">
-              <img src="css/images/wall-of-gain.png">
+          <div class="logo-div">
+              <img class="logo" src="css/images/wall-of-gain.png">
           </div>
     </section>
+
+  <!--team sections--> 
+<section class="container">
+  <div class="headings-box">
+    <h2>The Founders</h2>
+  </div>
+  <div class="card">
+    <div class="imgBox">
+      <img src="css/images/nk.pfp.jpeg">
+    </div>
+      <div class="details">
+        <div class="content">
+          <h3>NK<br><span>Crypto and NFT enthusiast, does everything from delivering profitable calls on Sol, collabs and building the server with and Amazing spirit!</span></h3>
+          <div class="social-icons">
+            <a class="t-logo-bottom" href="https://twitter.com/nkk_sol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
+</section>
+
+
+
+  <!--<section class="founders-section-area">
+  <div class="founders-container">
+    <div class="webpage-heading">
+      <h1 class="founders-title">The Founders</h1>
+    </div>
+
+<div class="founders-container" class="template-spacing">
+  <div class="founders-template">
+    <h2 class="founders-centering">NK</h2>
+    <img class="founders-pfp" src="css/images/nk.pfp.jpeg" alt="NK profile pictur
+    <a class="t-logo-bottom" href="https://twitter.com/nkk_sol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+  </div>
+  test<div class="founders-container">
+    <h2 class="founders-centering">CryptoChris</h2>
+    <img class="founders-pfp" src="css/images/crypto.chris-pfp.png" alt="CryptoChris profile picture">
+    <p>Chris works mostly behing the scene, taking care of the tech side of discord and website. Finding collabs and building the communty with a good vibe</p>
+    <a class="t-logo-bottom" href="https://twitter.com/CryptoChrisSol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+  </div>
+  <div class="founders-container">
+    <h2 class="founders-centering">Sim</h2>
+    <img class="founders-pfp" src="css/images/sim-pfp.png" alt="Sim profile picture">
+    <p>Our beloved discord and collab manager. he makes great collabs and wl giveaways for our members, and are always in chat helping out.</p>
+    <a class="t-logo-bottom" href="https://twitter.com/CryptoSim66" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+  </div>
+  <div class="founders-container">
+    <h2 class="founders-centering">Chasemoney4life</h2>
+    <img class="founders-pfp" src="css/images/chase-pfp.png" alt="Chasemoney4life profile picture">
+    <p> Chase is a beast, he does this full time. He is on everything from sol and eth nfts, to futures. this guy dont sleep and are always hungry for profit, sharing all the alpha</p>
+    <a class="t-logo-bottom" src="https://twitter.com/chasemoney4Iife" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+  </div>
+  <div class="founders-container">
+    <h2 class="founders-centering">Stayin_Blick</h2>
+    <img class="founders-pfp" src="css/images/blick-pfp.jpeg" alt="Stayin_blick profile picture">
+    <p> Community-Mod living and vibin in chat, helping everyone out when they have questions and showing them around. Also helps out with finding good projects and collabs</p>
+    <a class="t-logo-bottom" href="https://twitter.com/crypto_blick" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+  </div>
+  <div class="founders-container">
+    <h2 class="founders-centering">CyberWolfgr</h2>
+    <img class="founders-pfp" src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr profile picture">
+    <p> Community-Mod with a lot of experience with crypto, now having a great interest in NFTs aswell. has his own channel with crazy amount of free books and usefull content</p>
+    <a class="t-logo-bottom" href="https://twitter.com/CyberWolf_gr" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+  </div>
+</div>
+  </div>
+  </section>-->
