--- a/home page.html
+++ b/home page.html
@@ -49,8 +49,9 @@
     <h2>The Founders</h2>
   </div>
   <div class="card">
-    <div class="imgBox">
+    <div class="imgbox">
       <img src="css/images/nk.pfp.jpeg">
+      <img src="#" alt="NK profile picture"><!--2nd nft pic-->
     </div>
       <div class="details">
         <div class="content">
