--- a/home page.html
+++ b/home page.html
@@ -44,71 +44,93 @@
     </section>
 
   <!--team sections--> 
-<section class="container">
+<section class="team-container">
   <div class="headings-box">
     <h2>The Founders</h2>
   </div>
   <div class="card">
     <div class="imgbox">
-      <img src="css/images/nk.pfp.jpeg">
-      <img src="#" alt="NK profile picture"><!--2nd nft pic-->
+      <img src="css/images/nk.pfp.jpeg" alt="Nk profile picture">
+      <img src="css/images/nk.pfp.jpeg" alt="Nk 2nd PF" ><!--2nd nft pic-->
     </div>
       <div class="details">
         <div class="content">
-          <h3>NK<br><span>Crypto and NFT enthusiast, does everything from delivering profitable calls on Sol, collabs and building the server with and Amazing spirit!</span></h3>
+          <h3>Nk<br><span>Crypto and NFT enthusiast, does everything from delivering profitable calls on Sol, collabs and building the server with and Amazing spirit!</span></h3>
           <div class="social-icons">
             <a class="t-logo-bottom" href="https://twitter.com/nkk_sol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
           </div>
         </div>
       </div>
   </div>
+  <div class="card">
+  <div class="imgbox">
+    <img src="css/images/chase-pfp.png" alt="Chase profile picture">
+    <img src="css/images/chase-pfp.png" alt="Chase 2nd PF" ><!--2nd nft pic-->
+  </div>
+    <div class="details">
+      <div class="content">
+        <h3>Chase<br><span>Chase is a beast, he does this full time. He is on everything from sol and eth nfts, to futures. this guy dont sleep and are always hungry for profit, sharing all the alpha.</span></h3>
+        <div class="social-icons">
+          <a class="t-logo-bottom" href="https://twitter.com/chasemoney4Iife" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+  <div class="imgbox">
+    <img src="css/images/crypto.chris-pfp.png" alt="CryptoChris profile picture">
+    <img src="css/images/crypto.chris-pfp.png" alt="CryptoChris 2nd PF" ><!--2nd nft pic-->
+  </div>
+    <div class="details">
+      <div class="content">
+        <h3>CryptoChris<br><span>Chris works mostly behing the scene, taking care of the tech side of discord and website. Finding collabs and building the communty with a good vibe.</span></h3>
+        <div class="social-icons">
+          <a class="t-logo-bottom" href="https://twitter.com/CryptoChrisSol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="imgbox">
+      <img src="css/images/sim-pfp.png" alt="Sim profile picture">
+      <img src="css/images/sim-pfp.png" alt="Sim 2nd PF" ><!--2nd nft pic-->
+    </div>
+    <div class="details">
+      <div class="content">
+        <h3>Sim<br><span>Our beloved discord and collab manager. he makes great collabs and wl giveaways for our members, and are always in chat helping out.</span></h3>
+        <div class="social-icons">
+          <a class="t-logo-bottom" href="https://twitter.com/CryptoSim66" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+<div class="card">
+  <div class="imgbox">
+    <img src="css/images/blick-pfp.jpeg" alt="Stayin_Blick profile picture">
+    <img src="css/images/blick-pfp.jpeg" alt="Stayin_Blick 2nd PF" ><!--2nd nft pic-->
+  </div>
+    <div class="details">
+      <div class="content">
+        <h3>Stayin_Blick<br><span>Community-Mod living and vibin in chat, helping everyone out when they have questions and showing them around. Also helps out with finding good projects and collabs.</span></h3>
+        <div class="social-icons">
+          <a class="t-logo-bottom" href="https://twitter.com/crypto_blick" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+        </div>
+      </div>
+    </div>
+</div>
+<div class="card">
+  <div class="imgbox">
+    <img src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr profile picture">
+    <img src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr 2nd PF" ><!--2nd nft pic-->
+  </div>
+    <div class="details">
+      <div class="content">
+        <h3>CyberWolfgr<br><span>Community-Mod with a lot of experience with crypto, now having a great interest in NFTs aswell. has his own channel with crazy amount of free books and usefull content.</span></h3>
+        <div class="social-icons">
+          <a class="t-logo-bottom" href="https://twitter.com/CyberWolf_gr" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+        </div>
+      </div>
+    </div>
 </div>
 </section>
 
-
-
-  <!--<section class="founders-section-area">
-  <div class="founders-container">
-    <div class="webpage-heading">
-      <h1 class="founders-title">The Founders</h1>
-    </div>
-
-<div class="founders-container" class="template-spacing">
-  <div class="founders-template">
-    <h2 class="founders-centering">NK</h2>
-    <img class="founders-pfp" src="css/images/nk.pfp.jpeg" alt="NK profile pictur
-    <a class="t-logo-bottom" href="https://twitter.com/nkk_sol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-  </div>
-  test<div class="founders-container">
-    <h2 class="founders-centering">CryptoChris</h2>
-    <img class="founders-pfp" src="css/images/crypto.chris-pfp.png" alt="CryptoChris profile picture">
-    <p>Chris works mostly behing the scene, taking care of the tech side of discord and website. Finding collabs and building the communty with a good vibe</p>
-    <a class="t-logo-bottom" href="https://twitter.com/CryptoChrisSol" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-  </div>
-  <div class="founders-container">
-    <h2 class="founders-centering">Sim</h2>
-    <img class="founders-pfp" src="css/images/sim-pfp.png" alt="Sim profile picture">
-    <p>Our beloved discord and collab manager. he makes great collabs and wl giveaways for our members, and are always in chat helping out.</p>
-    <a class="t-logo-bottom" href="https://twitter.com/CryptoSim66" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-  </div>
-  <div class="founders-container">
-    <h2 class="founders-centering">Chasemoney4life</h2>
-    <img class="founders-pfp" src="css/images/chase-pfp.png" alt="Chasemoney4life profile picture">
-    <p> Chase is a beast, he does this full time. He is on everything from sol and eth nfts, to futures. this guy dont sleep and are always hungry for profit, sharing all the alpha</p>
-    <a class="t-logo-bottom" src="https://twitter.com/chasemoney4Iife" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-  </div>
-  <div class="founders-container">
-    <h2 class="founders-centering">Stayin_Blick</h2>
-    <img class="founders-pfp" src="css/images/blick-pfp.jpeg" alt="Stayin_blick profile picture">
-    <p> Community-Mod living and vibin in chat, helping everyone out when they have questions and showing them around. Also helps out with finding good projects and collabs</p>
-    <a class="t-logo-bottom" href="https://twitter.com/crypto_blick" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-  </div>
-  <div class="founders-container">
-    <h2 class="founders-centering">CyberWolfgr</h2>
-    <img class="founders-pfp" src="css/images/cyberwolf-pfp.jpeg" alt="CyberWolfgr profile picture">
-    <p> Community-Mod with a lot of experience with crypto, now having a great interest in NFTs aswell. has his own channel with crazy amount of free books and usefull content</p>
-    <a class="t-logo-bottom" href="https://twitter.com/CyberWolf_gr" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-  </div>
-</div>
-  </div>
-  </section>-->
