--- a/home page.html
+++ b/home page.html
@@ -43,7 +43,7 @@
           </div>
     </section>
 
-  <!--team sections--> 
+  <!--team section--> 
 <section class="team-container">
   <div class="headings-box">
     <h2>The Founders</h2>
