--- a/home page.html
+++ b/home page.html
@@ -134,3 +134,99 @@
 </div>
 </section>
 
+  <!--Callers-->
+<section class="profit-container">
+  <div class="heaading-box">
+    <h2>The Profit makers</h2>
+  </div>
+  <div>
+    <p>A term you will come across in this space, is the Callers. Callers are indivudals that have been in their respective space for an amount of time and have been able to increase their wins, through developing their analytic skills when it comes to Nfts or Futures. Callers in our discord research and provide informatin for those in the community  allowing them to share their opinion in the community.</p>
+  </div>
+  <div>
+      <section class=callers-cards>
+        <div>
+          <h2>Solana Callers</h2>
+          <ul class="callers-list">
+            <li>Nk</li>
+            <li>Chase</li>
+            <li>Mps</li>
+            <li>Duke</li>
+            <li>hokage</li>
+            <li>Apa</li>
+            <li>Otzurk</li>
+            <li>degen plays</li>
+          </ul>
+       </div>
+       <div>
+        <h2>Ethereum Callers</h2>
+        <ul class="callers-list">
+          <ul class="callers-list">
+            <li>Chase</li>
+            <li>Mo</li>
+            <li>Sain</li>
+            <li>degen plays</li>
+          </ul>
+     </div>
+     <div>
+      <h2>Futures Callers</h2>
+      <ul class="callers-list">
+        <li>Chase</li>
+        <li>Duke</li>
+        <li>Ajzee</li>
+        <li>Simon</li>
+        <li>Sparkers</li>
+        <li>Skordo</li>
+        <li>Crypto-Cream bot</li>
+        <li>Tba</li>
+        <li>Tba</li>
+      </ul>
+     </div>
+     </section>
+
+<!--
+
+<section class="profit-spacing" id="profits">
+    <h2 class="webpage-heading">What we've done and what we are going to keep doing</h2>
+  </section>
+<section>
+<div>
+  <p >
+Here's an exmaple of the profits our callers have made for the community, theres more profit being made each day make sure you dont miss out !! 
+  </p>
+</div>
+  <div>
+    <h2>Solana NFT Profits</h2>
+     <div class="profit-list-section">
+      <ul class="profit-list">
+        <li><image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-2.png"></image></li>
+        <li><image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-3.png"></image></li>
+        <li><image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit.png"></image></li>
+      </ul>
+    </div>
+  </div>
+
+  <div>
+    <h2>Ethereum NFT Profits</h2>
+  <div>
+    <ul class="profit-list">
+        <li><image class="profit-image" alt="Etheruem NFT profit" src="css/images/eth-nft-profit.png"></image></li>
+        <li><image class="profit-image" alt="Ethereum NFT profit" src="css/images/eth-nft-profit-2.png"></image></li>
+        <li><image class="profit-image" alt="Ethereum NFT profit" src="css/images/eth-nft-profit-3.png"></image></li>
+      </ul>
+  </div>
+  </div>
+
+  <div>
+  <h2>Futures NFT Profits</h2>
+  <div class="future-overflow">
+    <ul class="profit-list">
+        <li><image class="future-profit-image" alt="Futures NFT profit" src="css/images/futues-profit-1.png"></image></li>
+        <li><image class="future-profit-image" alt="Futures NFT profit" src="css/images/future-profit-2.jpg"></image></li>
+        <li><image class="future-profit-image" alt="Futures NFT profit" src="css/images/future-profit-3.png"></image></li>
+        <li><image class="future-profit-image" alt="Futures NFT profit" src="css/images/future-profit-4.png"></image></li>
+    </ul>
+  </div>
+  </div>
+
+-->
+
