profits pics next

--- a/home page.html
+++ b/home page.html
@@ -140,35 +140,40 @@
     <h2>The Profit makers</h2>
   </div>
   <div>
-    <p>A term you will come across in this space, is the Callers. Callers are indivudals that have been in their respective space for an amount of time and have been able to increase their wins, through developing their analytic skills when it comes to Nfts or Futures. Callers in our discord research and provide informatin for those in the community  allowing them to share their opinion in the community.</p>
+    <p class = "caller-content-box">A term you will come across in this space, is the Callers. Callers are indivudals that have been in their respective space for an amount of time and have been able to increase their wins, through developing their analytic skills when it comes to Nfts or Futures. Callers in our discord research and provide informatin for those in the community  allowing them to share their opinion in the community.</p>
   </div>
-  <div>
-      <section class=callers-cards>
-        <div>
-          <h2>Solana Callers</h2>
-          <ul class="callers-list">
-            <li>Nk</li>
-            <li>Chase</li>
-            <li>Mps</li>
-            <li>Duke</li>
-            <li>hokage</li>
-            <li>Apa</li>
-            <li>Otzurk</li>
-            <li>degen plays</li>
-          </ul>
-       </div>
-       <div>
-        <h2>Ethereum Callers</h2>
-        <ul class="callers-list">
-          <ul class="callers-list">
-            <li>Chase</li>
-            <li>Mo</li>
-            <li>Sain</li>
-            <li>degen plays</li>
-          </ul>
-     </div>
-     <div>
-      <h2>Futures Callers</h2>
+  <div class = "caller-box">
+    <span></span>
+    <div class="callers-content">
+      <h3>Solana Callers</h3>
+      <ul class="callers-list">
+        <li>Nk</li>
+        <li>Chase</li>
+        <li>Mps</li>
+        <li>Duke</li>
+        <li>hokage</li>
+        <li>Apa</li>
+        <li>Otzurk</li>
+        <li>degen plays</li>
+      </ul>
+    </div>
+  </div>
+  <div class = "caller-box">
+    <span></span>
+    <div class="callers-content">
+      <h3>Ethereum Callers</h3>
+      <ul class="callers-list">
+          <li>Chase</li>
+          <li>Mo</li>
+          <li>Sain</li>
+          <li>degen plays</li>
+      </ul>
+    </div>
+  </div>
+  <div class = "caller-box">
+    <span></span>
+    <div class="callers-content">
+      <h3>Futures Callers</h3>
       <ul class="callers-list">
         <li>Chase</li>
         <li>Duke</li>
@@ -180,9 +185,9 @@
         <li>Tba</li>
         <li>Tba</li>
       </ul>
-     </div>
-     </section>
-
+    </div>
+  </div>
+</section>
 <!--
 
 <section class="profit-spacing" id="profits">
