--- a/home page.html
+++ b/home page.html
@@ -188,50 +188,103 @@
     </div>
   </div>
 </section>
-<!--
 
-<section class="profit-spacing" id="profits">
-    <h2 class="webpage-heading">What we've done and what we are going to keep doing</h2>
-  </section>
-<section>
-<div>
-  <p >
-Here's an exmaple of the profits our callers have made for the community, theres more profit being made each day make sure you dont miss out !! 
-  </p>
-</div>
-  <div>
-    <h2>Solana NFT Profits</h2>
-     <div class="profit-list-section">
-      <ul class="profit-list">
-        <li><image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-2.png"></image></li>
-        <li><image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-3.png"></image></li>
-        <li><image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit.png"></image></li>
-      </ul>
-    </div>
-  </div>
-
-  <div>
-    <h2>Ethereum NFT Profits</h2>
-  <div>
-    <ul class="profit-list">
-        <li><image class="profit-image" alt="Etheruem NFT profit" src="css/images/eth-nft-profit.png"></image></li>
-        <li><image class="profit-image" alt="Ethereum NFT profit" src="css/images/eth-nft-profit-2.png"></image></li>
-        <li><image class="profit-image" alt="Ethereum NFT profit" src="css/images/eth-nft-profit-3.png"></image></li>
-      </ul>
-  </div>
-  </div>
-
-  <div>
-  <h2>Futures NFT Profits</h2>
-  <div class="future-overflow">
-    <ul class="profit-list">
-        <li><image class="future-profit-image" alt="Futures NFT profit" src="css/images/futues-profit-1.png"></image></li>
-        <li><image class="future-profit-image" alt="Futures NFT profit" src="css/images/future-profit-2.jpg"></image></li>
-        <li><image class="future-profit-image" alt="Futures NFT profit" src="css/images/future-profit-3.png"></image></li>
-        <li><image class="future-profit-image" alt="Futures NFT profit" src="css/images/future-profit-4.png"></image></li>
-    </ul>
-  </div>
-  </div>
-
--->
+<!--profits-->
+<section class="section-pics">
+  <header class="profit-pic-header">
+    <h2>Profits</h2>
+    <p>
+      Here's an exmaple of the profits our callers have made for the community, etherum,solana, futures and sports bets. Theres more profit being made each day make sure you dont miss out !! 
+    </p>
+  </header>
+  <div class="picture-container-1"> <!--act as body-->
+    <div class="slider">
+      <div class="slide-track">
+        
+        <div class="slide">
+          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-2.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-3.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="Futures profit" src="css/images/futues-profit-1.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-2.jpg"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-3.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-4.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-3.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-2.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-1.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-2.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-3.png"></image>
+        </div>
+        <!--pics repeated-->
+        <div class="slide">
+          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-2.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-3.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="Futures profit" src="css/images/futues-profit-1.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-2.jpg"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-3.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-4.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-3.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-2.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-1.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-2.png"></image>
+        </div>
+        <div class="slide">
+          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-3.png"></image>
+        </div>
+</section>
 
