--- a/home page.html
+++ b/home page.html
@@ -197,10 +197,9 @@
       Here's an exmaple of the profits our callers have made for the community, etherum,solana, futures and sports bets. Theres more profit being made each day make sure you dont miss out !! 
     </p>
   </header>
-  <div class="picture-container-1"> <!--act as body-->
+  <div class="picture-container-1">
     <div class="slider">
       <div class="slide-track">
-        
         <div class="slide">
           <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-2.png"></image>
         </div>
@@ -286,5 +285,122 @@
         <div class="slide">
           <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-3.png"></image>
         </div>
+      </div>
+    </div>
+  </div>
 </section>
 
+<!--education-->
+<section class = "education-wrapper">
+  <header>
+    <h2>Education</h2>
+  </header>
+
+  <div>
+    <h3>New to NFTs ?<span>Then this is a great community to start your NFT/Crypto journey. We all know what it's like coming in to this space, it's a lot to take in, and it can be overwhelming! So we have a golden rule in our discord, and that is, there is no stupid questions! Everyone is kind and helpful, so dont be afraid to join the conversation, it’s the best way to learn. if you have time spare come check out these helpful sites to explore the crypto and NFT space. the first type for any newbie entering either the Ethereum or Solana the first step is, to buy that cryptocurrecny on an exchange. lets say we wanted to buy a solana NFT, we buy our Solaana on an exchange e.g.<span><a href="https://www.coinbase.com" target="_blank">Coinbase</a> then we transfer this to a wallet ready to buy the solana NFT. we will go into more detail in the discord with step by step instructions.</h3></span>
+  </div>
+
+  <!--marketplaces-->
+  <div>
+    <h3>Solana marketplaces</h3>
+    <div class="split-iframe">
+      <iframe src="https://magiceden.io" title="Magic Eden homepage" width="300"></iframe>
+      <iframe src="https://hyperspace.xyz/" title="Hyperspace homepage" width="300"></iframe>
+    </div>
+    <div>
+      <p>There are different companies that offer a place to buy and sell NFTs, above are two examples Magic eden and Coral Cube. Different marketplaces have different benefits one to have your eye on as a newcomer in the space are the fees associated with buying the NFT e.g. (Magic eden takes a 2% fee on NFTs sold, whereas Hyperspace takes only 1% so your able to keep more profits).</p>
+    </div>
+    <div>
+      <p>come check out helpful tools to help you navigate through the space. Solsniper is a perfect tool to allow users to check an NFTs price history, current listings and more. discord is a place where Nfts communities hang out and talk. project founders use this as a way to communicate with their community keeping them up to date with recent developments and more.</p>
+      <ul class="solana-tool">
+          <a href="http://solsniper.xyz" target:_blank="">Solsniper</a>
+          <a href="https://discord.com" target:_blank="">Discord</a> 
+      </ul>
+  </div>
+  </div>
+  <div>
+    <h3>Ethereum marketplaces</h3>
+    <div class="eth-iframe"> <!-- start here-->
+      <iframe class="rarible" src="https://rarible.com" title="Rarible Homepage"></iframe>
+    </div>
+    <div>
+      <p>There are different companies that offer a place to buy and sell NFTs, above are two examples Magic eden and Coral Cube. Different marketplaces have different benefits one to have your eye on as a newcomer in the space are the fees associated with buying the NFT e.g. (Magic eden takes a 2% fee on NFTs sold, whereas Hyperspace takes only 1% so your able to keep more profits).</p>
+    </div>
+    <div>
+      <p>come check out helpful tools to help you navigate through the space. Solsniper is a perfect tool to allow users to check an NFTs price history, current listings and more. discord is a place where Nfts communities hang out and talk. project founders use this as a way to communicate with their community keeping them up to date with recent developments and more.</p>
+      <ul class="solana-tool">
+          <li><a href="http://solsniper.xyz" target:_blank="">Solsniper</a></li>
+          <li><a href="https://discord.com" target:_blank="">Discord</a></li> 
+      </ul>
+  </div>
+  </div>
+</section>
+
+
+<!--
+
+<div id="eth-marketplaces">
+  <h2> Ethereum marketplaces </h2>
+     
+  <div>
+    <div class="future-marketplace-text">
+      <p>
+        Rarible is another marketplace this is diferent to the ones we explored earlier, is this marketplace allows the user to buy and sell NFTs in either Solana, Tezos or Etheruem. by allowing user to use multiple tokens to mint, it brings a bigger community compared to some.
+      </p>
+    </div>
+    <iframe class="rarible" src="https://rarible.com" title="Rarible Homepage" width="300"></iframe>
+  </div>
+</div>
+<br>
+<div class="future-div">
+  <div id="futures">
+    <h2> Futures </h2>
+  </div>
+<br>
+  <iframe  class="video-float"src="https://www.youtube.com/embed/VYWc9dFqROI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="future-marketplace">
+    <div class="different-marketplace-text">
+    <h3 class="marketplace-heading">Different Marketplaces</h3>
+    <ul class="future-list">
+      <li>
+        <a href="https://www.bybit.com/" target="_blank">Bybit</a>
+      </li>
+      <li>
+       <a href="https://www.binance.com/" target="_blank">Binance</a>
+      </li>
+      <li>
+       <a href="https://www.kucoin.com/" target="_blank">kucoin</a>
+      </li>
+      <li>
+       <a href="https://bingx.com/" target="_blank">BingX</a>
+      </li> 
+    </ul>
+  </div>
+  </div>
+</div>    
+<br>
+
+<--Footer   
+<footer class="footer-area">
+  <div>
+    <p>
+      <h2>Join us today or miss the profits the choice is yours.</h2>
+    </p>
+    <div>
+      <p>Copyright © 2022 WallOfGains All Rights Reserved</p>
+    </div>
+  </div>
+
+  <div footer-icons>
+    <a href="https://discord.gg/GDCgsA8UuN" target="_blank"><i class="fa-brands fa-discord"></i></a>
+    <a href="https://twitter.com/WallofGains" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
+  </div>
+
+  <div class="up-arrow">
+    <a href="#top"><i class="fa-solid fa-arrow-up"></i></a>
+  </div>
+</footer>
+</body>
+</html
+
+-->
